<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="102dp"
        android:layout_height="0dp"
        android:background="#FCAF01"
        android:text="@string/buttonEqual"
        android:textColor="#DCDCDC"
        app:layout_constraintBottom_toBottomOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button0"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button14"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/buttonComma"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="102dp"
        android:layout_height="105dp"
        android:layout_marginStart="1dp"
        android:background="#3A3A3A"
        android:text="@string/button2"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button1"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button1"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button3"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="102dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button5"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button4"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button4"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="102dp"
        android:layout_height="105dp"
        android:background="#2C2C2C"
        android:text="@string/buttonPlus"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/button6"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button6"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button8"
        android:layout_width="102dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button8"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button9"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button9"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv" />

    <Button
        android:id="@+id/button7"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:background="#3A3A3A"
        android:text="@string/button7"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="102dp"
        android:layout_height="105dp"
        android:background="#2C2C2C"
        android:text="@string/buttonMinus"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultipl" />

    <Button
        android:id="@+id/button"
        android:layout_width="102dp"
        android:layout_height="104dp"
        android:background="#2C2C2C"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toBottomOf="@+id/textViewScreen" />

    <Button
        android:id="@+id/buttonMultipl"
        android:layout_width="102dp"
        android:layout_height="104dp"
        android:background="#2C2C2C"
        android:text="@string/button_multipl"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDiv"
        app:layout_constraintTop_toBottomOf="@+id/textViewScreen" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="101dp"
        android:layout_height="104dp"
        android:background="#2C2C2C"
        android:text="@string/button_div"
        android:textColor="#DCDCDC"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultipl"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textViewScreen" />

    <TextView
        android:id="@+id/textViewScreen"
        android:layout_width="413dp"
        android:layout_height="100dp"
        android:background="#000000"
        android:gravity="bottom|right"
        android:text="0"
        android:textAlignment="gravity"
        android:textColor="#7E7E7E"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="101dp"
        android:layout_height="104dp"
        android:background="#2C2C2C"
        android:src="@drawable/backspace_24dp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>